@@ -5,7 +5,7 @@ import com.bmuschko.gradle.docker.tasks.image.Dockerfile
 
 buildscript {
     ext {
-        springBootVersion = '2.1.1.RELEASE'
+        springBootVersion = '2.2.0.M1'
     }
     repositories {
         mavenCentral()
@@ -19,14 +19,17 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'jacoco'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'application'
 apply plugin: 'com.bmuschko.docker-remote-api'
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_12
+targetCompatibility = JavaVersion.VERSION_12
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')     // to support Java 12 new switch construction
+}
 
 bootJar {
     archiveFileName = 'analog.jar'
@@ -37,6 +40,65 @@ bootJar {
                 "Implementation-Vendor": "Toparvion"
         )
     }
+}
+
+repositories {
+    // mavenLocal()
+    mavenCentral()
+    maven { url 'https://repo.spring.io/libs-milestone' }
+    maven { url 'https://repo.spring.io/libs-snapshot' }
+}
+
+dependencies {
+    // Backend compile deps
+//    compile("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
+    implementation platform (group: 'org.springframework.boot', name: 'spring-boot-dependencies', version: springBootVersion)
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+    implementation group: 'org.springframework.boot' , name: 'spring-boot-starter-websocket'
+    implementation group: 'net.bull.javamelody', name: 'javamelody-spring-boot-starter', version: '1.75.0'
+
+    implementation group: 'org.springframework.integration', name: 'spring-integration-file'
+    implementation group: 'org.springframework.integration', name: 'spring-integration-rmi'
+
+    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
+    implementation group: 'net.sf.jtidy', name: 'jtidy', version: 'r938'
+    implementation group: 'com.github.mpkorstanje', name: 'simmetrics-core', version: '4.1.1'
+    implementation group: 'com.github.zafarkhaja', name: 'java-semver', version: '0.9.0'
+
+    // Frontend deps
+    implementation group: 'org.webjars', name: 'angularjs', version: '1.5.8'
+    implementation group: 'org.webjars', name: 'highlightjs', version: '9.8.0'
+    implementation group: 'org.webjars', name: 'jquery', version: '1.11.1'
+    implementation group: 'org.webjars.npm', name: 'jquery.scrollto', version: '2.1.2'
+    implementation group: 'org.webjars', name: 'sockjs-client', version: '1.1.2'
+    implementation group: 'org.webjars.npm', name: 'stomp__stompjs', version: '3.1.2'
+    // compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7' // imported as downloaded themed version
+    implementation group: 'org.webjars', name: 'angular-ui-select', version: '0.19.6'
+    implementation group: 'org.webjars.npm', name: 'balloon-css', version: '0.5.0'
+
+    implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
+
+    runtimeOnly group: 'commons-logging', name: 'commons-logging', version: '1.2'
+
+    // Test deps
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    testImplementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+    // JUnit family
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
+    testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine'
+}
+
+junitPlatform {
+    enableStandardTestTask = true
+}
+test {
+    useJUnitPlatform()
+    jvmArgs(['--enable-preview'])
+}
+startScripts {
+    enabled = false
 }
 
 //<editor-fold desc="Tasks for working with Docker images">
@@ -101,62 +163,3 @@ task dockerInfo(type: DockerInfo) {
     description 'Prints Docker instance info'
 }
 //</editor-fold>
-
-test {
-    useJUnitPlatform()
-}
-
-repositories {
-    // mavenLocal()
-    mavenCentral()
-    maven { url 'https://repo.spring.io/libs-milestone' }
-    maven { url 'https://repo.spring.io/libs-snapshot' }
-}
-
-dependencies {
-    // Backend compile deps
-//    compile("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-    implementation group: 'org.springframework.boot' , name: 'spring-boot-starter-websocket'
-    implementation group: 'net.bull.javamelody', name: 'javamelody-spring-boot-starter', version: '1.75.0'
-
-    implementation group: 'org.springframework.integration', name: 'spring-integration-file'
-    implementation group: 'org.springframework.integration', name: 'spring-integration-rmi'
-
-    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
-    implementation group: 'net.sf.jtidy', name: 'jtidy', version: 'r938'
-    implementation group: 'com.github.mpkorstanje', name: 'simmetrics-core', version: '4.1.1'
-    implementation group: 'com.github.zafarkhaja', name: 'java-semver', version: '0.9.0'
-
-    // Frontend deps
-    implementation group: 'org.webjars', name: 'angularjs', version: '1.5.8'
-    implementation group: 'org.webjars', name: 'highlightjs', version: '9.8.0'
-    implementation group: 'org.webjars', name: 'jquery', version: '1.11.1'
-    implementation group: 'org.webjars.npm', name: 'jquery.scrollto', version: '2.1.2'
-    implementation group: 'org.webjars', name: 'sockjs-client', version: '1.1.2'
-    implementation group: 'org.webjars.npm', name: 'stomp__stompjs', version: '3.1.2'
-    // compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7' // imported as downloaded themed version
-    implementation group: 'org.webjars', name: 'angular-ui-select', version: '0.19.6'
-    implementation group: 'org.webjars.npm', name: 'balloon-css', version: '0.5.0'
-
-    implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
-
-    runtimeOnly group: 'commons-logging', name: 'commons-logging', version: '1.2'
-
-    // Test deps
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testImplementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    // JUnit family
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
-    testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine'
-}
-
-junitPlatform {
-    enableStandardTestTask = true
-}
-
-startScripts {
-    enabled = false
-}
